# MMCAD

./: .gitignore  ARCHIVE_README.md  CITATION.cff  CLIP4CAD_GFA_v2_Architecture.md  LICENSE  README.md  abc_evaluation.ipynb  activate_env.bat  clip4cad.md  clip4cad_architecture_candidates_v2.md  environment.yml  generate_candidate_notebooks.py  generate_clip4cad_notebook.py  mmcad_training_clip4cad.ipynb  mmcad_training_colab.ipynb  mmcad_training_colab_text.ipynb  pyproject.toml  requirements.txt  setup.py  tempinstr.txt  tempout.txt
.claude/: settings.local.json
clip4cad/: __init__.py
clip4cad.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
configs/: default.yaml
docs/: ARCHITECTURE_CANDIDATES_V2.md  CLIP4CAD_GFA_v2_4_Architecture.md  CLIP4CAD_GFA_v4_2_Architecture.md  CLIP4CAD_GFA_v4_8_1_Architecture.md  CLIP4CAD_GFA_v4_8_Architecture.md  CLIP4CAD_GFA_v4_9_Architecture.md  CLIP4CAD_GFA_v4_Architecture.md  COMPLETE_EXPERIMENTAL_HISTORY.md  EXPERIMENTAL_RESULTS_MASTER.md  TOPOLOGY_FIX_REFERENCE.md  autobrep_features.md  clip4cad_hus.md  index.html
notebooks/: clip4cad_candidate_a_vib.ipynb  clip4cad_candidate_b_sheaf.ipynb  clip4cad_candidate_c_hierarchical.ipynb  clip4cad_candidate_d_sigreg.ipynb  clip4cad_candidate_e_fullstack.ipynb  clip4cad_evaluation.ipynb  diagnose_brep_data.py  diagnose_hus.py  eval_gfa_v2.ipynb  eval_gfa_v2_4.ipynb  eval_gfa_v4.ipynb  eval_gfa_v4_2.ipynb  eval_gfa_v4_4.ipynb  inference_demo.ipynb  mmcad_inference.ipynb  mmcad_render_encoder.ipynb  mmcad_sketch_encoder.ipynb  mmcad_training_colab.ipynb  mmcad_v_trimodal_c.ipynb  (+20 more)
(+121 files in other folders)
